--- a/src/Presentation/SmartStore.Web/Views/News/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/News/List.cshtml
@@ -11,7 +11,7 @@
 <div class="page news-list-page">
     <div class="page-title">
         <a href="@Url.Action("rss", new { languageId = Model.WorkingLanguageId })" class="link-rss" title="@T("News.RSS.Hint")">
-            <i class="fa fa-rss text-muted"></i>
+            <i class="fa fa-rss"></i>
             @T("News.RSS")
         </a>
         <h1>@T("News")</h1>
@@ -23,16 +23,16 @@
         <div class="news-items">
             @foreach (var item in Model.NewsItems)
             {
-                <div class="news-item">
-                    <h4 class="news-title clearfix">
+                <div class="news-item mb-5">
+                    <h4 class="news-title">
                         <a class="news-title" href="@Url.RouteUrl("NewsItem", new { SeName = item.SeName })">
                             @item.Title
                         </a>
-                        <span class="news-date text-muted pull-right">
+                        <span class="news-date float-right">
                            @item.CreatedOn.ToString("D")
                         </span>
                     </h4>
-                    <div class="news-details">
+                    <div class="news-details mt-3 mb-2">
                         @Html.Raw(item.Short)
                     </div>
                     <a href="@Url.RouteUrl("NewsItem", new { SeName = item.SeName })" class="read-more">
