--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_misc.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_misc.scss
@@ -76,7 +76,7 @@ body.popup {
 }
 
 // homepage news
-.news-items {
+/*.news-items {
     a {
         color: $body-color; 
     }
@@ -108,7 +108,7 @@ body.popup {
 }
 .news-item-page .block-title {
     font-weight: $font-weight-light;
-}
+}*/
 
 
 // menu
