--- a/src/Presentation/SmartStore.Web/Views/News/Partials/HomePageNews.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/News/Partials/HomePageNews.cshtml
@@ -7,42 +7,42 @@
 
 @if (Model.NewsItems.Count > 0)
 {
-    <div class="block news-list-homepage">
-        <div class="heading heading-center">
-            <h3 class="heading-title fs-h1">@T("News")</h3>
-        </div>
+    <div class="block news-list-homepage mb-6">
+		<div class="row">
+			<div class="col">
+				<div class="heading">
+					<h3 class="heading-title fs-h1">@T("News")</h3>
+				</div>
+			</div>
+			<div class="col col-auto">
+				<a class="btn btn-warning" href="@Url.Action("rss", new { languageId = Model.WorkingLanguageId })" title="@T("News.RSS.Hint")">
+					<i class="fa fa-rss"></i>
+					<span>@T("News.RSS")</span>
+				</a>
+				<a class="btn btn-outline-info btn-flat" href="@Url.RouteUrl("NewsArchive")">
+					<span>@T("News.ViewAll")</span>
+					<i class="fa fa-angle-right"></i>
+				</a>
+			</div>
+		</div>
+
         <div class="block-body news-items">
             @foreach (var item in Model.NewsItems)
             {
-                <div class="news-item mb-5">
-                    <h4 class="news-title">
-                        <a class="news-title" href="@Url.RouteUrl("NewsItem", new { SeName = item.SeName })">
+                <div class="news-item mb-4">
+					<div class="text-muted small">
+						@item.CreatedOn.ToString("D")
+					</div>
+					<h4 class="news-title">
+                        <a class="fs-h5 color-body" href="@Url.RouteUrl("NewsItem", new { SeName = item.SeName })">
                             @item.Title
                         </a>
-                        <span class="news-date float-right">
-                           @item.CreatedOn.ToString("D")
-                        </span>
                     </h4>
-                    <div class="news-details mt-3 mb-2">
+                    <p class="lead mt-2">
                         @Html.Raw(item.Short)
-                    </div>
-                    <a href="@Url.RouteUrl("NewsItem", new { SeName = item.SeName })" class="read-more">
-                        @T("News.MoreInfo")
-                    </a>
+                    </p>
                 </div>
             }
-
-            <a href="@Url.Action("rss", new { languageId = Model.WorkingLanguageId })" class="link-rss" title="@T("News.RSS.Hint")" data-toggle="tooltip">
-                <i class="fa fa-rss"></i>
-                @T("News.RSS")
-            </a>
-
-            <div class="view-all">
-                <a class="btn btn-sm btn-outline-secondary" href="@Url.RouteUrl("NewsArchive")">
-                    <i class="fa fa-file-text-o"></i>
-                    <span>@T("News.ViewAll")</span>
-                </a>
-            </div>
         </div>
     </div>
 }
