--- a/src/Presentation/SmartStore.Web/Views/News/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/News/List.cshtml
@@ -1,48 +1,52 @@
 ﻿@model NewsItemListModel
+
 @using SmartStore.Web;
 @using SmartStore.Web.Models.News;
 @using SmartStore.Web.Framework.UI;
+
 @{
     Layout = "_Layout";
-
     Html.AddTitleParts(T("PageTitle.NewsArchive").Text);
 }
 
 <div class="page news-list-page">
-    <div class="page-title">
-        <a href="@Url.Action("rss", new { languageId = Model.WorkingLanguageId })" class="link-rss" title="@T("News.RSS.Hint")">
-            <i class="fa fa-rss"></i>
-            @T("News.RSS")
-        </a>
-        <h1>@T("News")</h1>
-    </div>
+	<div class="row mb-5">
+		<div class="col">
+			<div class="heading">
+				<h1 class="heading-title fs-h1">@T("News")</h1>
+			</div>
+		</div>
+		<div class="col col-auto">
+			<a class="btn btn-warning" href="@Url.Action("rss", new { languageId = Model.WorkingLanguageId })" title="@T("News.RSS.Hint")">
+				<i class="fa fa-rss"></i>
+				<span>@T("News.RSS")</span>
+			</a>
+		</div>
+	</div>
 
     <div class="page-body">
         @{ Html.RenderWidget("newslist_page_before_items"); }
 
-        <div class="news-items">
+        <div class="news-items mb-6">
             @foreach (var item in Model.NewsItems)
             {
-                <div class="news-item mb-5">
-                    <h4 class="news-title">
-                        <a class="news-title" href="@Url.RouteUrl("NewsItem", new { SeName = item.SeName })">
-                            @item.Title
-                        </a>
-                        <span class="news-date float-right">
-                           @item.CreatedOn.ToString("D")
-                        </span>
-                    </h4>
-                    <div class="news-details mt-3 mb-2">
-                        @Html.Raw(item.Short)
-                    </div>
-                    <a href="@Url.RouteUrl("NewsItem", new { SeName = item.SeName })" class="read-more">
-                        @T("News.MoreInfo")
-                    </a>
-                </div>
-            }
+				<div class="news-item mb-5">
+					<div class="text-muted small">
+						@item.CreatedOn.ToString("D")
+					</div>
+					<h4 class="news-title">
+						<a class="fs-h5 color-body" href="@Url.RouteUrl("NewsItem", new { SeName = item.SeName })">
+							@item.Title
+						</a>
+					</h4>
+					<p class="lead mt-2">
+						@Html.Raw(item.Short)
+					</p>
+				</div>
+			}
         </div>
 
-        @Html.SmartStore().Pager(Model.PagingFilteringContext).QueryParam("pagenumber")
+        @Html.SmartStore().Pager(Model.PagingFilteringContext).Alignment(PagerAlignment.Centered).Size(PagerSize.Large).QueryParam("pagenumber")
 
         @{ Html.RenderWidget("newslist_page_after_items"); }
     </div>
