--- a/src/Presentation/SmartStore.Web/Views/Blog/BlogPost.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Blog/BlogPost.cshtml
@@ -6,8 +6,6 @@
     Html.AddTitleParts(!String.IsNullOrEmpty(Model.MetaTitle) ? Model.MetaTitle : Model.Title);
     Html.AddMetaDescriptionParts(Model.MetaDescription);
     Html.AddMetaKeywordParts(Model.MetaKeywords);
-
-	string avatarSpanning = (Model.AllowCustomersToUploadAvatars ? "padding-left: {0}px; min-height: {0}px;".FormatWith(Model.AvatarPictureSize + 30) : "");
 }
 
 @section left {
@@ -17,15 +15,14 @@
     }
 }
 
-<article class="page blogpost-page">
-    
+<article class="page blogpost-page">  
     <div class="blogpost-date text-muted">
         @Model.CreatedOn.ToString("D")
     </div>
 
-    <h1 class="page-title fs-h3">
-        @Model.Title
-    </h1>
+    <div class="page-title mb-6">
+		<h1 class="fs-h2">@Model.Title</h1>
+    </div>
 
     <div class="blogpost-body">
 		@{ Html.RenderWidget("blogpost_page_before_body"); }
@@ -47,88 +44,49 @@
         }
 
 		@{ Html.RenderWidget("blogpost_page_before_comments"); }
-        @if (Model.AllowComments)
-        {
-            <div id="new-comment" class="new-comment card">
-                <div class="card-block">
-                    <h3 class="card-title">@T("Blog.Comments.LeaveYourComment")</h3>
-                    @using (Html.BeginForm())
-                    {
-                        <div class="card-text">
-                            @Html.ValidationSummary()
-                            <div class="forms-box">
-                                <div class="inputs">
-                                    @Html.LabelFor(model => model.AddNewComment.CommentText)
-                                    <div class="input-box">
-                                        @Html.TextAreaFor(model => model.AddNewComment.CommentText, new { @class = "comment-text" })
-                                    </div>
-                                </div>
-                                @if (Model.AddNewComment.DisplayCaptcha)
-                                {
-                                    <div class="captcha-box">
-                                        @Html.Raw(Html.GenerateCaptcha())
-                                    </div>
-                                }
-                            </div>
 
-                            <div class="buttons">
-                                <button type="submit" name="add-comment" value="add-comment" class="btn btn-primary blog-post-add-comment-button">
-                                    <i class="fa fa-check"></i>
-                                    @T("Blog.Comments.SubmitButton")
-                                </button>
-                            </div>
-                        </div>
-                    }
-                </div>
+		@if (Model.Comments.AllowComments)
+		{
+			<div class="row">
+				<div class="col-12">
+					<div class="block blog-comment-form mt-6">
+						@using (Html.BeginForm())
+						{
+							<fieldset class="blog-comment-form content-group mt-5">
+								<legend><span>@T("Blog.Comments.LeaveYourComment")</span></legend>
 
-            </div>
-            
-            if (Model.Comments.Count > 0)
-            {
-                <div class="comment-list block">
+								@if (ViewContext.ViewData.ModelState.ContainsKey(""))
+								{
+									@Html.ValidationSummary(true)
+								}
 
-                    <div class="title block-title">
-                        @T("Blog.Comments") (@Model.NumberOfComments)
-                    </div>
-
-                    <div class="block-body">
-                    @foreach (var comment in Model.Comments)
-                    {
-                        <div class="comment-item blog-comment clearfix" style="@avatarSpanning">
-                            
-                            @if (!String.IsNullOrEmpty(comment.CustomerAvatarUrl))
-                            {
-								<div class="comment-avatar">
-									<img src="@(comment.CustomerAvatarUrl)" class="avatar-img img-thumbnail" title="avatar" alt="avatar" />
+								<div class="form-group">
+									@Html.TextAreaFor(model => model.AddNewComment.CommentText, new { @class = "form-control form-control-lg", placeholder = Html.DisplayNameFor(m => m.AddNewComment.CommentText), rows = "6" })
+									@Html.ValidationMessageFor(model => model.AddNewComment.CommentText)
 								</div>
-                            }
 
-                            <div class="comment-content">
-                                <div class="comment-info">
-                                    @if (comment.AllowViewingProfiles)
-                                    {
-                                        <a href="@Url.RouteUrl("CustomerProfile", new { id = comment.CustomerId })" rel="nofollow" class="username">@(comment.CustomerName)</a>
-                                    }
-                                    else
-                                    {
-                                        <span class="username">@(comment.CustomerName)</span>
-                                    }
-                                    <span class="comment-time">
-                                        @comment.CreatedOn.ToString("D")
-                                    </span>
-                                </div>
-                                <div class="comment-body">
-                                    @Html.Raw(SmartStore.Core.Html.HtmlUtils.FormatText(comment.CommentText, false, true, false, false, false, false))
-                                </div>
-                            </div>
+								@if (Model.AddNewComment.DisplayCaptcha)
+								{
+									<div class="form-group">
+										<div class="captcha-box">
+											@Html.Raw(Html.GenerateCaptcha())
+										</div>
+									</div>
+								}
 
-							@{ Html.RenderWidget("blogpost_page_inside_comment"); }
-                        </div>
-                    }
-                    </div>
-                </div>
-            }
-        }
+								<div class="form-group">
+									<button type="submit" name="add-comment" value="add-comment" class="btn btn-primary btn-lg">
+										@T("Blog.Comments.SubmitButton")
+									</button>
+								</div>
+							</fieldset>
+						}
+					</div>
+
+					@{ Html.RenderPartial("Comment.List", Model.Comments); }
+				</div>
+			</div>
+		}
 
 		@{ Html.RenderWidget("blogpost_page_after_comments"); }
     </div>
