--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_variables.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_variables.scss
@@ -45,6 +45,8 @@ $footer-social-color:           #fff !default;
 
 $login-box-bg:                  #fcfcfc !default;
 
+$cart-footer-bg:                $gray-lightest !default;
+
 
 
 // Brand color variables
